src/styles.css
:root {
  --main-color-purple: #8a2be2;
  --main-color-purple-off: rgb(169, 77, 255);
  --text-color-main-black: color: #202020;
  --text-color-hover-black: #0000009d;
  --text-color-light-grey: rgba(0, 0, 0, 0.44);
}

* {
  margin: 0;
  padding: 0;
}

h1 {
  margin: 0;
}

#main-page-wrapper {
  display: flex;
  height: 100vh;
  width: 100%;
  font-family: 'Open Sans', sans-serif;
  color: var(--text-color-main-black);
}

#navbar {
  padding: 0 10px;
  background-color: var(--main-color-purple);
  height: 80px;
  display: flex;
  align-items: center;
}

.navbar-left {
  display: flex;
  gap: 10px;
}

.navbar-left,
.navbar-center,
.navbar-right {
  flex: 1;
}

.material-symbols-outlined {
  font-variation-settings:
    'FILL' 0,
    'wght' 400,
    'GRAD' 0,
    'opsz' 24;
  font-size: 32px;
}

.navbar-icon {
  background-color: transparent;
  color: #fff;
  border: none;
  cursor: pointer;
  border-radius: 6px;
}

.navbar-icon:hover {
  background-color: var(--main-color-purple-off);
}
.navbar-center {
  display: flex;
  justify-content: center;
  font-family: 'Fjalla One', sans-serif;
  color: #fff;
}

.navbar-center h1 {
  margin: 0.67em 0;
}

.logo {
  height: 68px;
}

/* Content */

#heading-wrapper {
  display: flex;
  align-items: baseline;
  gap: 10px;
  margin-bottom: 25px;
}

#main-heading {
  font-size: 1.7em;
  font-weight: 600;
}

#date-header {
  font-size: 1.1em;
  font-weight: 600;
  color: var(--text-color-light-grey);
}

/* Add task button */
#add-task-button {
  display: flex;
  align-items: center;
  justify-content: space-evenly;
  font-size: 17px;
  width: 116px;
  height: 24px;
  background-color: transparent;
  border: none;
  border-radius: 10px;
  box-shadow: none;
  padding: 0 9px;
}

#add-task-button > img {
  border-radius: 50%;
}

#add-task-button > div {
  font-weight: 600;
}

#add-task-button:hover {
  cursor: pointer;
}

#add-task-button:hover img {
  filter: invert(19%) sepia(54%) saturate(6519%) hue-rotate(269deg)
    brightness(93%) contrast(90%);
}

#add-task-button:hover div {
  color: var(--main-color-purple);
  transition: 0.3s;
}

/* Push the page content to the right when you open the side navigation */
#main-content-wrapper {
  transition: margin-left 0.5s;
  width: 100%;
  padding: 20px;
}

/* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
@media screen and (max-height: 450px) {
  .sidenav {
    padding-top: 15px;
  }
  .sidenav a {
    font-size: 18px;
  }
}

